# melo

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  DEV.md  LICENSE.md  README.md  dance.sh  rustfmt.toml
examples/: parse.rs  parse_all.rs
pieces/: minimal_chords.melo  minimal_drums.melo  minimal_drums.midscript  multiple_instruments.melo  multiple_instruments.midscript  polyrhythms.melo  repeats.melo  rondo_alla_turca.melo  time_and_tempo.midscript
pieces_fixed/: minimal_drums.melo  minimal_melody.melo  repeats.melo  rondo_alla_turca.melo  time_and_tempo.melo  too_many_staves.melo
reference/: instruments.txt  notes.txt
scripts/: install
src/: abc_generation.rs  error.rs  lexer.rs  lexing.rs  lib.rs  main.rs  notes.rs  parser.rs  parsing.rs  sequencing.rs  test_helpers.rs  trust.rs  validation.rs  validator.rs
src/abc_generation/: error.rs  mod.rs
src/formatting/: mod.rs
src/lexing/: data.rs  error.rs  mod.rs
src/midi_generation/: data.rs  mod.rs
src/parse/: mod.rs
src/parsing/: data.rs  error.rs  mod.rs
src/parsing_old/: data.rs  error.rs  mod.rs
src/sequencing/: data.rs  error.rs  mod.rs
test_files/: complex_melody.abc  complex_melody.midscript  drums_arg.abc  drums_arg.midscript  fifths.abc  fifths.midscript  lexing_test.midscript  longer_melody.abc  longer_melody.midscript  mixed_barlines.abc  mixed_barlines.midscript  not_sextuplets.abc  not_sextuplets.midscript  octave_shift.abc  octave_shift.midscript  parsing_test.midscript  quintuplets.abc  quintuplets.midscript  simple_drums.abc  simple_drums.midscript  simple_melody.abc  simple_melody.midscript  test.abc  triple_time_expansion.abc  triple_time_expansion.midscript  triplets.abc  triplets.midscript  untidy_triplets.abc  untidy_triplets.midscript  variable_drum_bars.abc  variable_drum_bars.midscript  variable_stave_drum_bars.abc  variable_stave_drum_bars.midscript  voice_args.abc  voice_args.midscript
tests/: compile_pieces_to_abc_tests.rs  compile_to_abc_tests.rs  new_parser.rs  test_lexer.rs  test_parser.rs  test_parsing.rs
tests/abc_tests/: complex_melody.abc  complex_melody.melo  fifths.abc  longer_melody.abc  not_sextuplets.melo  octave_shift.melo  quintuplets.melo  simple_drums.melo  simple_drums.midscript  triple_time_expansion.abc  triple_time_expansion.melo  triplets.melo  variable_drum_bars.melo  variable_stave_drum_bars.abc  variable_stave_drum_bars.melo  variable_stave_drum_bars.midscript
vim/ftdetect/: melo.vim
vim/syntax/: melo.vim
