[package]
name = "melo"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]
description = "A music notation language and compiler to (abc notation, but eventually) MIDI."
repository = "https://github.com/Pirh/melo"
readme = "README.md"
keywords = ["music", "notation", "language", "midi"]
categories = ["command-line-utilities", "multimedia::audio"]
license = "MIT"

[dependencies]
ansi_term = "~0.10.2"
failure = "~0.1.1"
rimd = "~0.0.1"
lazy_static = "~1.0.0"
mktemp = "~0.3.1"
regex = "~0.2.5"
structopt = "~0.1.6"
structopt-derive = "~0.1.6"

[dev-dependencies]
pretty_assertions = "~0.4.1"

