[package]
name = "melo"
version = "0.2.0"
authors = ["Vi <violet@hey.com>"]
description = "A music notation language and compiler to MIDI."
repository = "https://github.com/mistodon/melo"
readme = "README.md"
keywords = ["music", "notation", "language", "midi"]
categories = ["command-line-utilities", "multimedia::audio"]
license = "CC0-1.0"
edition = "2021"

[[bin]]
name = "melo"
path = "src/main.rs"
required-features = ["cli"]
doc = false

[dependencies]
ansi_term = "~0.12.1"
color-eyre = "~0.6.1"
lazy_static = "~1.4.0"
mktemp = { version = "~0.4.1", optional = true }
sashimi = { path = "../../libs/sashimi" }
regex = "~1.5.6"
rimd = "~0.0.1"
structopt = { version = "~0.3.21", optional = true }
thiserror = "~1.0.31"

[dev-dependencies]
pretty_assertions = "~0.7.1"

[features]
default = ["cli", "color"]
cli = ["mktemp", "structopt"]
color = []

